<resources>
    <string name="app_name">BiciApp</string>
    <string name="correo">Correo</string>
    <string name="clave">Contraseña</string>
    <string name="login">LogIn</string>
    <string name="registrar">Registrar</string>
    <string name="nombre">Nombre </string>
    <string name="edad">Edad</string>
    <string name="Genero">Genero</string>
    <string name="TerminarRegistro">Registrarse</string>
    <string name="Bienvenido">Bienvenido a tu perfil</string>
    <string name="Salir">Cerrar sesion</string>
    <string name="Editar">Editar perfil</string>
    <string name="Veces">Veces que se ha hecho login:</string>
    <string name="registrarUbicacion">Registrar nueva ubicacion</string>
    <string name="verUbicaciones">Ver ubicaciones de la empresa</string>
    <string name="volver">Volver </string>
    <string name="longitud">Longitud </string>
    <string name="latitud">Latitud </string>
    <string name="guardar">Guardar</string>
    <string name="eliminar">Eliminar ubicación</string>
    <string name="verEnMapa">Ver ubicaciones en mapa</string>
    <string name="title_activity_ver_ubicacion_mapa">verUbicacionMapa</string>
</resources>