<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".registrarNuevaUbicacion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Nombre"
            android:layout_width="122dp"
            android:layout_height="wrap_content"
            android:text="@string/nombre" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="450dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/y"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="Latitud " />

        <EditText
            android:id="@+id/editTextY"
            android:layout_width="293dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/x"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="Longitud " />

        <EditText
            android:id="@+id/editTextX"
            android:layout_width="450dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>
    <CheckBox
        android:id="@+id/checkBoxTurismo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Usado para turismo" />

    <CheckBox
        android:id="@+id/checkBoxTransporte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Usado para transporte" />


    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nombre_guardado"
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textView_nombre"
            android:layout_width="367dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/y_guardado"
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:text="@string/latitud"
            android:visibility="invisible" />
        <TextView
            android:id="@+id/textView_Y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/x_guardado"
            android:layout_width="76dp"
            android:layout_height="match_parent"
            android:text="@string/longitud"
            android:visibility="invisible" />
        <TextView
            android:id="@+id/textView_X"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/uso_guardado"
            android:layout_width="76dp"
            android:layout_height="match_parent"
            android:text="@string/uso"
            android:visibility="invisible" />
        <TextView
            android:id="@+id/textView_Uso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>



    <Button
        android:id="@+id/ver_ubicaciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verUbicaciones" />
    <Button
        android:id="@+id/volverAPerfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/volver" />


</LinearLayout>

